# oneday_agent_simulation_tests

./: .env.example  .gitignore  README.md  conftest.py  demo_example_test.py  doc_to_scenarios.py  generate_example_report.py  oneday_evaluation.py  oneday_guidelines.md  oneday_tests.py  project_9sBxjxEaR2HDIQIymHzCq - Traces - 2026-03-30 - summary.csv  pyproject.toml  requirements.txt  run_all_models.py  setup.ps1  setup.sh  test_doc_to_scenarios_cache.py  test_oneday_evaluation.py
doc_extraction/: __init__.py  doc_extraction.py  doc_to_scenarios.py
tests/: test_doc_to_scenarios.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/api/run/: route.ts
